setup project file part 1

--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "chai-aur-backend",
   "version": "1.0.0",
   "description": "In learning of Backend Completely. Creating a youtube like application",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon src/index.js"
   },
   "keywords": [
     "Javascript",
     "node"
   ],
   "author": "Shantanu Singh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  }
 }
